index.html title modified

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="./assets/shopping-mobile.svg" type="image/x-icon">
-  <title>Easy Shopping Via Mobile</title>
+  <title>Easy Shopping In Mobile</title>
 </head>
 <body>
   <div class="hero-container">
